--- a/style.css
+++ b/style.css
@@ -8,7 +8,139 @@ Template: salient
 Version: 0.1
 */
 
+/* Main Menu */
+#header-outer header#top nav > ul.buttons > li.menu-item-has-children> ul.sub-menu {
+  width: 100%;
+}
 
+/* Hero Section */
+#hero-section h1 {
+  font-size: 52px;
+  line-height: 52px;
+}
 
+#hero-section p {
+  font-size: 18px;
+}
 
+#hero-section .nectar-highlighted-text em {
+  font-size: 70px;
+}
 
+.hero-section-right h2 {
+  font-size: 52px;
+}
+
+#hero-section .nectar-button span {
+  border-radius: 4px!important;
+  border-width: initial;
+  font-size: 26px;
+  text-transform: none;
+  padding: 20px;
+}
+
+/* Contact */
+.wpcf7 p {
+  padding-bottom: 0px;
+}
+
+/* Buttons */
+body:not([data-button-style*="rounded_shadow"]) .full-width-section .light .nectar-button:not(.see-through):not(.see-through-2):not(.see-through-3) {
+  border-radius: 4px!important;
+  border-width: initial;
+}
+
+/* Nectar */
+.nectar-hor-list-item >.nectar-list-item:first-child {
+  font-weight: bold;
+}
+
+.nectar-hor-list-item {
+  border-bottom: 0!important;
+}
+
+/* Toggles */
+.toggle h3 a {
+  font-size: 24px!important;
+  line-height: 24px!important;
+}
+
+/* Mailchimp Form */
+#mc4wp-form-1 input[type=email] {
+  width: 60%!important;
+  display: inline;
+}
+
+#mc4wp-form-1 input[type="submit"] {
+  background-color: #ff1053!important;
+  text-transform: none!important;
+  padding: 20px!important;
+  font-size: 16px;
+  line-height: 16px;
+}
+
+body[data-button-style="rounded"].ascend .container-wrap input[type="submit"] {
+  background-color: #ff1053!important;
+  border-radius: 4px!important;
+  border-width: initial;
+  border-style: none;
+  font-size: 18px;
+  line-height: 24px;
+  text-transform: none!important
+}
+
+#mc4wp-form-1 input[type="submit"]:hover {
+  background-color: #F30045!important;
+  opacity: 1!important;
+}
+
+body[data-form-style="minimal"] .container-wrap .span_12.light input[type="email"], body[data-form-style="minimal"] .container-wrap .span_12.light input[type="email"] {
+  color: #555!important;
+  background-color: #fff;
+  border-radius: 4px;
+  border-width: initial;
+  border-style: none;
+}
+
+/* Cool Timeline */
+.cool_timeline h1.timeline-main-title {
+  display: none;
+}
+
+.cool-timeline .timeline-year .icon-placeholder span {
+    font-family: Hind!important;
+}
+
+.cool-timeline.compact .timeline-post .timeline-content h2.compact-content-title {
+  font-size: 26px!important;
+  font-weight: 700!important;
+}
+
+.main-design-6 .cool-timeline.compact.white-timeline .timeline-post .timeline-content .content-title.clt-meta-date {
+  display: none!important;
+}
+
+#roadmap [class^="icon-"], i[class*=" icon-"] {
+  background-color:
+}
+
+/* Popup Maker */
+.pum-theme-5190 .pum-container, .pum-theme-lightbox .pum-container {
+  border: none!important;
+  padding: 80px!important;
+}
+
+body[data-form-submit="regular"] input[type=submit] {
+  margin-top: 20px;
+  padding: 20px 30px;
+  font-size: 16px;
+}
+
+/* Footer */
+#footer-widgets .textwidget {
+  opacity: 0.7;
+}
+
+.ascend #footer-outer #footer-widgets .col ul li {
+  padding: 0!important;
+}
