--- a/style.css
+++ b/style.css
@@ -210,11 +210,13 @@ body[data-form-submit="regular"] input[type="submit"] {
 /* Footer */
 #footer-widgets .textwidget {
   opacity: 1;
-  font-size: 14px;
+  font-size: 16px !important;
 }
 
 .ascend #footer-outer #footer-widgets .col ul li {
   padding: 0 !important;
+  display: inline !important;
+  margin: 0 7px !important;
 }
 
 .ascend #footer-outer #footer-widgets .col ul li a:hover {
@@ -227,31 +229,52 @@ body[data-form-submit="regular"] input[type="submit"] {
 
 #footer-outer,
 #nectar_fullscreen_rows > #footer-outer.wpb_row .full-page-inner-wrap {
-  background-color: #4b35ef !important;
+  background-color: #fff !important;
 }
 
 #footer-outer #copyright li a i,
 #footer-outer #copyright p {
-  color: #ccc !important;
+  color: #8993a4 !important;
   font-size: 14px;
   padding-top: 20px;
 }
 
+.footer-links {
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+#footer-outer .widget .footer-language-switcher {
+  display: inline-block !important;
+  margin-bottom: 15px !important;
+}
+
+.footer-widget-copyright {
+  color: #172b4d;
+}
+
 #footer-outer a:not(.nectar-button) {
-  color: #ccc !important;
+  color: #8993a4 !important;
+}
+
+#footer-outer .widget {
+  margin-bottom: 10px !important;
 }
 
 .ascend #footer-outer #footer-widgets .col ul li a {
-  opacity: 0.7 !important;
+  opacity: 1 !important;
+  text-decoration: underline;
+  display: inline !important;
 }
 
 .ascend #footer-outer #footer-widgets .col ul li a:hover {
   opacity: 1 !important;
+  color: #4d4d4d !important;
 }
 
 #footer-outer .footer-languages a {
   padding-left: 5px;
-  opacity: 0.7;
+  opacity: 1;
 }
 
 #footer-outer .footer-languages a:hover {
