--- a/style.css
+++ b/style.css
@@ -843,6 +843,35 @@ body .ihc-register-3 .iump-form-line-register .select2-selection {
   max-width: 400px;
 }
 
+.ihc-register-14 .iump-labels-register {
+  /*display: none !important;*/
+}
+
+.ihc-register-14 .iump-form-line-register input[type="text"] {
+  width: 100%;
+  border: 2px solid rgba(0, 0, 0, 0.15);
+  border-radius: 2px;
+  color: #2b2b2b;
+  padding: 8px 10px 7px;
+  height: 40px !important;
+}
+
+.iump-form-plain_text {
+  text-align: center;
+  color: #5e6c84;
+  font-size: 16px;
+  letter-spacing: -0.01em;
+  line-height: 28px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  padding: 0 5px !important;
+  font-weight: 700;
+}
+
+.top-level {
+  padding-top: 0 !important;
+}
+
 /* Responsive */
 @media only screen and (min-width: 1000px) {
   .container {
